// Bun Snapshot v1, https://bun.sh/docs/test/snapshots

exports[`HeightField (desktop/web path) snapshots matches snapshot with default props 1`] = `
{
  "$$typeof": Symbol(react.test.json),
  "children": [
    {
      "$$typeof": Symbol(react.test.json),
      "children": [
        {
          "$$typeof": Symbol(react.test.json),
          "children": [
            {
              "$$typeof": Symbol(react.test.json),
              "children": [
                {
                  "$$typeof": Symbol(react.test.json),
                  "children": null,
                  "props": {
                    "accessibilityHint": "Enter ft",
                    "aria-label": "ft input",
                    "editable": true,
                    "inputMode": "numeric",
                    "onBlur": [Function],
                    "onChangeText": [Function],
                    "onFocus": [Function],
                    "placeholder": "0",
                    "placeholderTextColor": "#686868",
                    "ref": undefined,
                    "selectTextOnFocus": true,
                    "style": {
                      "color": "#1C1C1C",
                      "fontFamily": "text",
                      "fontSize": 16,
                      "textAlign": "center",
                      "width": "100%",
                    },
                    "value": "",
                  },
                  "type": "TextInput",
                },
              ],
              "props": {
                "style": {
                  "alignItems": "center",
                  "backgroundColor": "#FFFFFF",
                  "borderColor": "#949494",
                  "borderRadius": 4,
                  "borderWidth": 1,
                  "flexDirection": "row",
                  "height": 40,
                  "justifyContent": "center",
                  "paddingHorizontal": 8,
                  "width": 50,
                },
                "testID": undefined,
              },
              "type": "View",
            },
            {
              "$$typeof": Symbol(react.test.json),
              "children": [
                {
                  "$$typeof": Symbol(react.test.json),
                  "children": [
                    "ft",
                  ],
                  "props": {
                    "numberOfLines": 0,
                    "selectable": undefined,
                    "style": {
                      "color": "#1C1C1C",
                      "fontFamily": "text-regular",
                      "fontSize": 14,
                      "textAlign": "left",
                    },
                    "testID": undefined,
                  },
                  "type": "Text",
                },
              ],
              "props": {},
              "type": "View",
            },
          ],
          "props": {
            "style": {
              "alignItems": "center",
              "flexDirection": "row",
              "gap": 4,
            },
            "testID": undefined,
          },
          "type": "View",
        },
        {
          "$$typeof": Symbol(react.test.json),
          "children": [
            {
              "$$typeof": Symbol(react.test.json),
              "children": [
                {
                  "$$typeof": Symbol(react.test.json),
                  "children": null,
                  "props": {
                    "accessibilityHint": "Enter in",
                    "aria-label": "in input",
                    "editable": true,
                    "inputMode": "numeric",
                    "onBlur": [Function],
                    "onChangeText": [Function],
                    "onFocus": [Function],
                    "placeholder": "0",
                    "placeholderTextColor": "#686868",
                    "ref": undefined,
                    "selectTextOnFocus": true,
                    "style": {
                      "color": "#1C1C1C",
                      "fontFamily": "text",
                      "fontSize": 16,
                      "textAlign": "center",
                      "width": "100%",
                    },
                    "value": "",
                  },
                  "type": "TextInput",
                },
              ],
              "props": {
                "style": {
                  "alignItems": "center",
                  "backgroundColor": "#FFFFFF",
                  "borderColor": "#949494",
                  "borderRadius": 4,
                  "borderWidth": 1,
                  "flexDirection": "row",
                  "height": 40,
                  "justifyContent": "center",
                  "paddingHorizontal": 8,
                  "width": 50,
                },
                "testID": undefined,
              },
              "type": "View",
            },
            {
              "$$typeof": Symbol(react.test.json),
              "children": [
                {
                  "$$typeof": Symbol(react.test.json),
                  "children": [
                    "in",
                  ],
                  "props": {
                    "numberOfLines": 0,
                    "selectable": undefined,
                    "style": {
                      "color": "#1C1C1C",
                      "fontFamily": "text-regular",
                      "fontSize": 14,
                      "textAlign": "left",
                    },
                    "testID": undefined,
                  },
                  "type": "Text",
                },
              ],
              "props": {},
              "type": "View",
            },
          ],
          "props": {
            "style": {
              "alignItems": "center",
              "flexDirection": "row",
              "gap": 4,
            },
            "testID": undefined,
          },
          "type": "View",
        },
      ],
      "props": {
        "onPointerEnter": [Function: AsyncFunction],
        "onPointerLeave": [Function: AsyncFunction],
        "style": {
          "display": "flex",
          "flexDirection": "row",
          "gap": 16,
        },
        "testID": undefined,
      },
      "type": "View",
    },
  ],
  "props": {
    "style": {
      "flexDirection": "column",
      "width": "100%",
    },
    "testID": undefined,
  },
  "type": "View",
}
`;

exports[`HeightField (desktop/web path) snapshots matches snapshot with value 1`] = `
{
  "$$typeof": Symbol(react.test.json),
  "children": [
    {
      "$$typeof": Symbol(react.test.json),
      "children": [
        {
          "$$typeof": Symbol(react.test.json),
          "children": [
            {
              "$$typeof": Symbol(react.test.json),
              "children": [
                {
                  "$$typeof": Symbol(react.test.json),
                  "children": null,
                  "props": {
                    "accessibilityHint": "Enter ft",
                    "aria-label": "ft input",
                    "editable": true,
                    "inputMode": "numeric",
                    "onBlur": [Function],
                    "onChangeText": [Function],
                    "onFocus": [Function],
                    "placeholder": "0",
                    "placeholderTextColor": "#686868",
                    "ref": undefined,
                    "selectTextOnFocus": true,
                    "style": {
                      "color": "#1C1C1C",
                      "fontFamily": "text",
                      "fontSize": 16,
                      "textAlign": "center",
                      "width": "100%",
                    },
                    "value": "5",
                  },
                  "type": "TextInput",
                },
              ],
              "props": {
                "style": {
                  "alignItems": "center",
                  "backgroundColor": "#FFFFFF",
                  "borderColor": "#949494",
                  "borderRadius": 4,
                  "borderWidth": 1,
                  "flexDirection": "row",
                  "height": 40,
                  "justifyContent": "center",
                  "paddingHorizontal": 8,
                  "width": 50,
                },
                "testID": undefined,
              },
              "type": "View",
            },
            {
              "$$typeof": Symbol(react.test.json),
              "children": [
                {
                  "$$typeof": Symbol(react.test.json),
                  "children": [
                    "ft",
                  ],
                  "props": {
                    "numberOfLines": 0,
                    "selectable": undefined,
                    "style": {
                      "color": "#1C1C1C",
                      "fontFamily": "text-regular",
                      "fontSize": 14,
                      "textAlign": "left",
                    },
                    "testID": undefined,
                  },
                  "type": "Text",
                },
              ],
              "props": {},
              "type": "View",
            },
          ],
          "props": {
            "style": {
              "alignItems": "center",
              "flexDirection": "row",
              "gap": 4,
            },
            "testID": undefined,
          },
          "type": "View",
        },
        {
          "$$typeof": Symbol(react.test.json),
          "children": [
            {
              "$$typeof": Symbol(react.test.json),
              "children": [
                {
                  "$$typeof": Symbol(react.test.json),
                  "children": null,
                  "props": {
                    "accessibilityHint": "Enter in",
                    "aria-label": "in input",
                    "editable": true,
                    "inputMode": "numeric",
                    "onBlur": [Function],
                    "onChangeText": [Function],
                    "onFocus": [Function],
                    "placeholder": "0",
                    "placeholderTextColor": "#686868",
                    "ref": undefined,
                    "selectTextOnFocus": true,
                    "style": {
                      "color": "#1C1C1C",
                      "fontFamily": "text",
                      "fontSize": 16,
                      "textAlign": "center",
                      "width": "100%",
                    },
                    "value": "10",
                  },
                  "type": "TextInput",
                },
              ],
              "props": {
                "style": {
                  "alignItems": "center",
                  "backgroundColor": "#FFFFFF",
                  "borderColor": "#949494",
                  "borderRadius": 4,
                  "borderWidth": 1,
                  "flexDirection": "row",
                  "height": 40,
                  "justifyContent": "center",
                  "paddingHorizontal": 8,
                  "width": 50,
                },
                "testID": undefined,
              },
              "type": "View",
            },
            {
              "$$typeof": Symbol(react.test.json),
              "children": [
                {
                  "$$typeof": Symbol(react.test.json),
                  "children": [
                    "in",
                  ],
                  "props": {
                    "numberOfLines": 0,
                    "selectable": undefined,
                    "style": {
                      "color": "#1C1C1C",
                      "fontFamily": "text-regular",
                      "fontSize": 14,
                      "textAlign": "left",
                    },
                    "testID": undefined,
                  },
                  "type": "Text",
                },
              ],
              "props": {},
              "type": "View",
            },
          ],
          "props": {
            "style": {
              "alignItems": "center",
              "flexDirection": "row",
              "gap": 4,
            },
            "testID": undefined,
          },
          "type": "View",
        },
      ],
      "props": {
        "onPointerEnter": [Function: AsyncFunction],
        "onPointerLeave": [Function: AsyncFunction],
        "style": {
          "display": "flex",
          "flexDirection": "row",
          "gap": 16,
        },
        "testID": undefined,
      },
      "type": "View",
    },
  ],
  "props": {
    "style": {
      "flexDirection": "column",
      "width": "100%",
    },
    "testID": undefined,
  },
  "type": "View",
}
`;

exports[`HeightField (desktop/web path) snapshots matches snapshot when disabled 1`] = `
{
  "$$typeof": Symbol(react.test.json),
  "children": [
    {
      "$$typeof": Symbol(react.test.json),
      "children": [
        {
          "$$typeof": Symbol(react.test.json),
          "children": [
            {
              "$$typeof": Symbol(react.test.json),
              "children": [
                {
                  "$$typeof": Symbol(react.test.json),
                  "children": null,
                  "props": {
                    "accessibilityHint": "Enter ft",
                    "aria-label": "ft input",
                    "editable": false,
                    "inputMode": "numeric",
                    "onBlur": [Function],
                    "onChangeText": [Function],
                    "onFocus": [Function],
                    "placeholder": "0",
                    "placeholderTextColor": "#686868",
                    "ref": undefined,
                    "selectTextOnFocus": true,
                    "style": {
                      "color": "#1C1C1C",
                      "fontFamily": "text",
                      "fontSize": 16,
                      "textAlign": "center",
                      "width": "100%",
                    },
                    "value": "5",
                  },
                  "type": "TextInput",
                },
              ],
              "props": {
                "style": {
                  "alignItems": "center",
                  "backgroundColor": "#CDCDCD",
                  "borderColor": "#4E4E4E",
                  "borderRadius": 4,
                  "borderWidth": 1,
                  "flexDirection": "row",
                  "height": 40,
                  "justifyContent": "center",
                  "paddingHorizontal": 8,
                  "width": 50,
                },
                "testID": undefined,
              },
              "type": "View",
            },
            {
              "$$typeof": Symbol(react.test.json),
              "children": [
                {
                  "$$typeof": Symbol(react.test.json),
                  "children": [
                    "ft",
                  ],
                  "props": {
                    "numberOfLines": 0,
                    "selectable": undefined,
                    "style": {
                      "color": "#1C1C1C",
                      "fontFamily": "text-regular",
                      "fontSize": 14,
                      "textAlign": "left",
                    },
                    "testID": undefined,
                  },
                  "type": "Text",
                },
              ],
              "props": {},
              "type": "View",
            },
          ],
          "props": {
            "style": {
              "alignItems": "center",
              "flexDirection": "row",
              "gap": 4,
            },
            "testID": undefined,
          },
          "type": "View",
        },
        {
          "$$typeof": Symbol(react.test.json),
          "children": [
            {
              "$$typeof": Symbol(react.test.json),
              "children": [
                {
                  "$$typeof": Symbol(react.test.json),
                  "children": null,
                  "props": {
                    "accessibilityHint": "Enter in",
                    "aria-label": "in input",
                    "editable": false,
                    "inputMode": "numeric",
                    "onBlur": [Function],
                    "onChangeText": [Function],
                    "onFocus": [Function],
                    "placeholder": "0",
                    "placeholderTextColor": "#686868",
                    "ref": undefined,
                    "selectTextOnFocus": true,
                    "style": {
                      "color": "#1C1C1C",
                      "fontFamily": "text",
                      "fontSize": 16,
                      "textAlign": "center",
                      "width": "100%",
                    },
                    "value": "10",
                  },
                  "type": "TextInput",
                },
              ],
              "props": {
                "style": {
                  "alignItems": "center",
                  "backgroundColor": "#CDCDCD",
                  "borderColor": "#4E4E4E",
                  "borderRadius": 4,
                  "borderWidth": 1,
                  "flexDirection": "row",
                  "height": 40,
                  "justifyContent": "center",
                  "paddingHorizontal": 8,
                  "width": 50,
                },
                "testID": undefined,
              },
              "type": "View",
            },
            {
              "$$typeof": Symbol(react.test.json),
              "children": [
                {
                  "$$typeof": Symbol(react.test.json),
                  "children": [
                    "in",
                  ],
                  "props": {
                    "numberOfLines": 0,
                    "selectable": undefined,
                    "style": {
                      "color": "#1C1C1C",
                      "fontFamily": "text-regular",
                      "fontSize": 14,
                      "textAlign": "left",
                    },
                    "testID": undefined,
                  },
                  "type": "Text",
                },
              ],
              "props": {},
              "type": "View",
            },
          ],
          "props": {
            "style": {
              "alignItems": "center",
              "flexDirection": "row",
              "gap": 4,
            },
            "testID": undefined,
          },
          "type": "View",
        },
      ],
      "props": {
        "onPointerEnter": [Function: AsyncFunction],
        "onPointerLeave": [Function: AsyncFunction],
        "style": {
          "display": "flex",
          "flexDirection": "row",
          "gap": 16,
        },
        "testID": undefined,
      },
      "type": "View",
    },
  ],
  "props": {
    "style": {
      "flexDirection": "column",
      "width": "100%",
    },
    "testID": undefined,
  },
  "type": "View",
}
`;
